--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li>
                 <a href="https://ntktajhneyf.github.io/LendingPage/" target="_blank">Lending Page</a>
-                <p class="project-description">Командний проект, при проходженні курсів навчання в 2018році. Використання: Html/CSS</p>
+                <p class="project-description">Командний проект, при проходженні курсів в 2018році. Використання: Html/CSS</p>
             </li>
             <li>
                 <a href="https://puzzlekids.netlify.app/" target="_blank">Game Puzzle for Kids</a>
@@ -22,7 +22,7 @@
             </li>
             <li>
                 <a href="https://ntktajhneyf.github.io/test_work/#" target="_blank">Test Work</a>
-                <p class="project-description">Виконання тестового завдання з оформлення сторінки. Роботиа з Figma та pixel perfect</p>
+                <p class="project-description">Виконання тестового завдання з оформлення сторінки. Робота з Figma та pixel perfect</p>
             </li>
 
             <li>
