--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </li>
             <li>
                 <a href="https://puzzlekids.netlify.app/" target="_blank">Game Puzzle for Kids</a>
-                <p class="project-description">Гра для доньки, була зроблена з застосування JS і React</p>
+                <p class="project-description">Гра для доньки, була зроблена із застосуванням JS і React</p>
             </li>
             <li>
                 <a href="https://ntktajhneyf.github.io/test_work/#" target="_blank">Test Work</a>
